added flyway, made some changes to the response/request classes. Which in turn will lade to a new major.
