# src/main/java/se/sundsvall/incident/api/model/ValidOepCategoryResponse.java
@@ -8,7 +8,7 @@ import lombok.Getter;
 @Getter
 @Builder(setterPrefix = "with")
 @AllArgsConstructor(access = AccessLevel.PACKAGE)
-public class ValidOepCategoryReponse {
+public class ValidOepCategoryResponse {
 
 	private String key;
 	private String value;
