# src/main/resources/openapi.yaml
@@ -20,15 +20,12 @@ paths:
         "200":
           description: All categories returned
           content:
-            '*/*':
+            application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/CategoryDTO'
-        "204":
-          description: No content
-          content:
-            '*/*':
+            application/problem+json:
               schema:
                 type: array
                 items:
@@ -36,13 +33,13 @@ paths:
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "500":
           description: Internal Server Error
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
     post:
@@ -62,13 +59,13 @@ paths:
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "500":
           description: Internal Server Error
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
   /api/sendincident:
@@ -84,18 +81,18 @@ paths:
               $ref: '#/components/schemas/IncidentSaveRequest'
         required: true
       responses:
-        "200":
-          description: Successful Operation
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/IncidentSaveResponse'
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/IncidentSaveResponse'
         "500":
           description: Internal Server Error
           content:
@@ -119,25 +116,23 @@ paths:
         "200":
           description: Category returned
           content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/CategoryDTO'
+            application/json: {}
         "404":
           description: Not found
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "500":
           description: Internal Server Error
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
     delete:
@@ -158,19 +153,19 @@ paths:
         "404":
           description: Not found
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "500":
           description: Internal Server Error
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
     patch:
@@ -195,25 +190,23 @@ paths:
         "200":
           description: Category was updated
           content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/CategoryDTO'
+            application/json: {}
         "404":
           description: Not found
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "500":
           description: Internal Server Error
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
   /api/statusupdate:
@@ -241,14 +234,14 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
         "500":
           description: Internal Server Error
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
-        "200":
-          description: Successful Operation
   /api/validstatuses:
     get:
       tags:
@@ -256,12 +249,6 @@ paths:
       summary: Get a list of valid statuses
       operationId: getValidstatuses
       responses:
-        "200":
-          description: Successful Operation
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/ValidStatusResponse'
         "400":
           description: Bad Request
           content:
@@ -274,6 +261,12 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ValidStatusResponse'
   /api/validcategories:
     get:
       tags:
@@ -287,18 +280,18 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful Operation
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/ValidCategoryResponse'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/validcategories/oep:
     get:
       tags:
@@ -323,7 +316,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/ValidOepCategoryReponse'
+                $ref: '#/components/schemas/ValidOepCategoryResponse'
   /api/setincidentfeedback:
     get:
       tags:
@@ -348,14 +341,14 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
         "500":
           description: Internal Server Error
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
-        "200":
-          description: Successful Operation
   /api/listincidents:
     get:
       tags:
@@ -382,18 +375,18 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful Operation
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/IncidentListResponse'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/internal/oep/status/{externalCaseId}:
     get:
       tags:
@@ -407,20 +400,8 @@ paths:
         schema:
           type: string
       responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
           content:
             '*/*':
               schema:
@@ -431,6 +412,18 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/IncidentOepResponse'
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/getincident/{id}:
     get:
       tags:
@@ -444,8 +437,8 @@ paths:
         schema:
           type: string
       responses:
-        "404":
-          description: Not Found
+        "400":
+          description: Bad Request
           content:
             '*/*':
               schema:
@@ -456,8 +449,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/IncidentResponse'
-        "400":
-          description: Bad Request
+        "404":
+          description: Not Found
           content:
             '*/*':
               schema:
@@ -613,6 +606,18 @@ components:
           type: string
         incidentId:
           type: string
+    CategoryPatch:
+      type: object
+      properties:
+        title:
+          type: string
+          description: Category title
+        label:
+          type: string
+          description: Category label
+        forwardTo:
+          type: string
+          description: The E-mail where the incidents are forwarded to
     CategoryDTO:
       type: object
       properties:
@@ -634,35 +639,23 @@ components:
           description: The E-mail where the incidents are forwarded to
           example: nowhere@nowhere.com
       description: Category model
-    CategoryPatch:
-      type: object
-      properties:
-        title:
-          type: string
-          description: Category title
-        label:
-          type: string
-          description: Category label
-        forwardTo:
-          type: string
-          description: The E-mail where the incidents are forwarded to
     ValidStatusResponse:
       type: object
       properties:
-        status:
-          type: string
-        status_ID:
+        statusId:
           type: integer
           format: int32
+        status:
+          type: string
     ValidCategoryResponse:
       type: object
       properties:
         category:
           type: string
-        category_ID:
+        categoryId:
           type: integer
           format: int32
-    ValidOepCategoryReponse:
+    ValidOepCategoryResponse:
       type: object
       properties:
         key:
